--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,23 @@
 html {
-  background-color: hsl(208, 100%, 97%);
+	background-color: hsl(208, 100%, 97%);
 }
 
 body {
-  margin: 0;
+	margin: 0;
 }
 
 #emojimind {
 	max-width: 36rem;
+	margin-left: auto;
+	margin-right: auto;
 	padding: 1rem;
 	font-size: 15px;
 	line-height: 1.3;
 }
 
 #emojimind header {
-  max-width: 90%;
-  margin-bottom: 2rem;
+	max-width: 90%;
+	margin-bottom: 2rem;
 }
 
 .Row {
@@ -28,43 +30,43 @@ body {
 }
 
 .SelectGuess {
-  display: flex;
-  list-style: none;
-  padding: 0;
+	display: flex;
+	list-style: none;
+	padding: 0;
 }
 
 input[type="number"] {
-  width: 2.5em;
-  text-align: center;
+	width: 2.5em;
+	text-align: center;
 }
 
 select,
 button {
-  padding: 0.3em 0.5em 0.4em;
-  border: 2px solid #000;
-  border-width: 1px 2px 2px 1px;
-  border-radius: 2px;
-  background-color: #eee;
+	padding: 0.3em 0.5em 0.4em;
+	border: 2px solid #000;
+	border-width: 1px 2px 2px 1px;
+	border-radius: 2px;
+	background-color: #eee;
 }
 
 button:focus,
 select:focus {
-  border-color: orange;
+	border-color: orange;
 }
 
 select {
-  margin-right: 2px;
-  min-width: 4em;
+	margin-right: 2px;
+	min-width: 4em;
 }
 
 code {
-  /* make it the same width as .SelectGuess */
-  font-size: 1.5em;
-  letter-spacing: 1.47em;
-  margin-left: 0.6em;
+	/* make it the same width as .SelectGuess */
+	font-size: 1.5em;
+	letter-spacing: 1.47em;
+	margin-left: 0.6em;
 }
 
 /* Vue.js specific to avoid flash of content when using conditional templating */
 [v-cloak] {
-  display: none;
+	display: none;
 }
