--- a/src/style.css
+++ b/src/style.css
@@ -11,8 +11,9 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	padding: 1rem;
-	font-size: 15px;
+	font-size: 17px;
 	line-height: 1.3;
+	font-family: georgia;
 }
 
 #emojimind header {
