--- a/src/style.css
+++ b/src/style.css
@@ -11,9 +11,8 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	padding: 1rem;
-	font-size: 17px;
+	font-size: 16px;
 	line-height: 1.3;
-	font-family: georgia;
 }
 
 #emojimind header {
@@ -37,13 +36,17 @@ body {
 }
 
 input[type="number"] {
-	width: 2.5em;
+	display: inline-block;
+	width: 3em;
 	text-align: center;
+	line-height: 1;
+	padding: 0.35em 0.4em;
 }
 
 select,
 button {
-	padding: 0.3em 0.5em 0.4em;
+	line-height: 1;
+	padding: 0.35em 0.5em 0.4em;
 	border: 2px solid #000;
 	border-width: 1px 2px 2px 1px;
 	border-radius: 2px;
