--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,22 @@
+@font-face {
+	font-family: 'junction';
+	src: url('fonts/junction-webfont.eot');
+	src: url('fonts/junction-webfont.eot?#iefix') format('embedded-opentype'),
+	url('fonts/junction-webfont.woff') format('woff'),
+	url('fonts/junction-webfont.ttf') format('truetype'),
+	url('fonts/junction-webfont.svg#junction_regularregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 html {
 	background-color: hsl(208, 100%, 97%);
+}
+
+html,
+input,
+button {
+	font-family: 'junction', sans-serif;
 }
 
 body {
