--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,36 @@
 @font-face {
 	font-family: 'junction';
-	src: url('fonts/junction-webfont.eot');
-	src: url('fonts/junction-webfont.eot?#iefix') format('embedded-opentype'),
-	url('fonts/junction-webfont.woff') format('woff'),
-	url('fonts/junction-webfont.ttf') format('truetype'),
-	url('fonts/junction-webfont.svg#junction_regularregular') format('svg');
+	src: url('fonts/junction-webfont.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
 
 html {
-	background-color: hsl(208, 100%, 97%);
+	/* background-color: hsl(208, 100%, 97%); */
+	/* background-image: url(http://lpc.opengameart.org/sites/all/themes/lpc/media/sharm_bg.png); */
+	/* background-image: url(https://res.cloudinary.com/radio4000/image/upload/c_scale,w_1440/v1478391775/back_2_j3ri1w.webp); */
+	background-size: 400px;
+	background-repeat: no-repeat;
+	font-size: 16px;
+	line-height: 1.4;
+	line-height: calc(24/16); 
+	background-color: hsl(125, 47%, 35%);
+	/* border-color: hsl(210, 33%, 9%); */
+	box-shadow:
+		inset hsl(262, 100%, 55%) 0 0 0 5px,
+		inset hsl(262, 93%, 53%) 0 0 0 1px,
+		inset hsl(262, 100%, 66%) 0 0 0 10px,
+		inset hsl(262, 91%, 64%) 0 0 0 11px,
+		inset hsl(262, 100%, 77%) 0 0 0 16px,
+		inset hsl(262, 87%, 75%) 0 0 0 17px,
+		inset hsl(262, 100%, 89%) 0 0 0 22px;
+	color: hsl(34, 78%, 96%);
 }
 
 html,
 input,
-button {
+button,
+select {
 	font-family: 'junction', sans-serif;
 }
 
@@ -27,14 +42,11 @@ body {
 	max-width: 36rem;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 1rem;
-	font-size: 16px;
-	line-height: 1.3;
+	padding: 2rem 2.5rem;
 }
 
 #emojimind header {
-	max-width: 90%;
-	margin-bottom: 2rem;
+	/* max-width: 90%; */
 }
 
 .Row {
@@ -53,21 +65,19 @@ body {
 }
 
 input[type="number"] {
-	display: inline-block;
-	width: 3em;
-	text-align: center;
-	line-height: 1;
-	padding: 0.35em 0.4em;
+	background-color: transparent;
+	color: hsl(34, 78%, 96%);
+	width: 2.2em;
 }
 
 select,
 button {
 	line-height: 1;
-	padding: 0.35em 0.5em 0.4em;
-	border: 2px solid #000;
-	border-width: 1px 2px 2px 1px;
+	padding: 0.6em 0.5em 0.5em;
+	border: 2px solid hsla(0, 0%, 0%, 0.8);
+	border-width: 1px 3px 3px 1px;
 	border-radius: 2px;
-	background-color: #eee;
+	background-color: hsl(34, 78%, 96%);
 }
 
 button:focus,
@@ -77,7 +87,13 @@ select:focus {
 
 select {
 	margin-right: 2px;
-	min-width: 4em;
+	width: 3em;
+	height: 3em;
+	border-radius: 50%;
+	padding: 0 0 0 1.15em;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 
 code {
