--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,7 @@ body {
 
 .Row > * {
 	margin-right: 1rem;
+	margin-bottom: 0;
 }
 
 .SelectGuess {
@@ -86,12 +87,13 @@ button {
 	border: 2px solid hsla(0, 0%, 0%, 0.8);
 	border-width: 1px 3px 3px 1px;
 	border-radius: 2px;
-	background-color: hsl(34, 78%, 96%);
+	background-color: hsl(34, 75%, 94%);
 }
 
-button:focus,
-select:focus {
+select:focus,
+button:focus {
 	border-color: orange;
+	background-color: hsl(34, 75%, 98%);
 }
 
 select {
